--- a/src/layouts/right-menu-tree-page/right-menu-tree-page.scss
+++ b/src/layouts/right-menu-tree-page/right-menu-tree-page.scss
@@ -16,7 +16,7 @@
     width: fit-content;
     min-height: 1px;
     height: fit-content;
-    padding: 0 1.5em 1.5em 1.5em;
+    padding: 0 0 1.5em 0;
     background-color: #001631;
     right: 0;
     position: absolute;
@@ -27,7 +27,7 @@
   }
   @media screen and (max-width: 600px) {
     min-width: 0;
-    padding: calc(1.5em + 30px) 1.5em 1.5em;
+    padding: calc(1.5em + 30px) 0 1.5em 0;
     row-gap: 1em;
   }
   overflow-y: auto;
